updating nav and outline

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,27 +1,27 @@
 * xref:01-setup.adoc[1. Backstage Pass: Accessing Backstage]
 ** xref:01-setup.adoc#prerequisites[Prerequisites]
 ** xref:01-setup.adoc#cluster_access[Accessing OpenShift]
-** xref:01-setup.adoc#project_access[OpenShift Project]
+** xref:01-setup.adoc#project_access[OpenShift Projects]
 ** xref:01-setup.adoc#backstage_access[Accessing Backstage]
 
 * xref:02-templates.adoc[2. Templates]
-** xref:02-templates.adoc#templates[Templates Introduction]
-** xref:02-templates.adoc#frontend[Deploy the Front End Template]
-** xref:02-templates.adoc#github[Front End Template Repo]
-** xref:02-templates.adoc#gateway[Deploy the Gateway Template]
+** xref:02-templates.adoc#templates[Software Templates]
+** xref:02-templates.adoc#frontend[Launch the Front End Template]
+** xref:02-templates.adoc#github[Front End Component Repo]
+** xref:02-templates.adoc#gateway[Launch the Gateway Template]
 ** xref:02-templates.adoc#pipelines[Tekton Pipelines]
 ** xref:02-templates.adoc#view_map[Access the resulting Workloads]
 
 * xref:03-components.adoc[3. Components]
 ** xref:03-components.adoc#software_catalog[Software Catalog]
-** xref:03-components.adoc#plugins[About Plugins]
 ** xref:03-components.adoc#frontend[View the Frontend Component]
+** xref:03-components.adoc#plugins[About Plugins]
 ** xref:03-components.adoc#gateway[View the Gateway Component]
 ** xref:03-components.adoc#backend_template[Launch the Backend Template]
 ** xref:03-components.adoc#backend[View the Backend Component]
-** xref:03-components.adoc#configuration[Service Binding]
+** xref:03-components.adoc#configuration[Service Binding and Configuration]
 
 * xref:04-development.adoc[4. Development]
-** xref:04-development.adoc#devspaces[DevSpaces]
-** xref:04-development.adoc#gateway_update[Update the Gateway Service]
-** xref:04-development.adoc#validate_changes[Validate your Changes]
+** xref:04-development.adoc#devspaces[OpenShift DevSpaces]
+** xref:04-development.adoc#gateway_update[Update the Gateway Component]
+** xref:04-development.adoc#validate_changes[Validate your changes]
