--- a/documentation/modules/ROOT/pages/02-templates.adoc
+++ b/documentation/modules/ROOT/pages/02-templates.adoc
@@ -2,26 +2,28 @@
 include::_attributes.adoc[]
 
 [#templates]
-== Introducing Templates
+== Software Templates
 
-image::backstage_create_frontend.png[]
 
 [#frontend]
 == Launch the Frontend template
+Click on `Create...` in the sidebar menu, then invoke the Angular Single Page Application frontend template
 
-Invoke the Angular Single Page Application frontend template in backstage
+image::backstage_create_frontend.png[]
+
+Keep all the default values, while inserting your NAMESPACE value into the form inputs in place of the `<NAMESPACE>` string. 
 
 image::frontend_1.png[]
 
-Insert your NAMESPACE value (from the previous chapter... it should be your username) into the form inputs in place of the `<NAMESPACE>` string. Click `NEXT STEP` to proceed.
+Insert your `<NAMESPACE>` value in the `Namespace` input and `user:<NAMESPACE>` into the `Owner` input, then click `NEXT STEP` to proceed
 
 image::frontend_2.png[]
 
-Insert your `NAMESPACE` value, then click `NEXT STEP` to proceed
+Provide your NAMESPACE as directed, then click `NEXT STEP` to proceed.
 
 image::frontend_3.png[]
 
-Review the input selections, click `CREATE` when ready
+Review the input selections, making sure that your own NAMESPACE has been used. Click `CREATE` when you are ready to create your first Component
 
 image::frontend_4.png[]
 
@@ -40,7 +42,7 @@ The resulting component yaml is available in the `catalog-info.yaml` file at the
 
 image::github_component.png[]
 
-If you the GitHub org carefully, you will notice a second "gitops" repo has been created.  Add "-gitops" to the end of the repo url to explore the contents of the other repo
+If you examine the GitHub org carefully, you will notice a second "gitops" repo has been created.  Add "-gitops" to the end of the repo url to explore the assets in the other repo
 
 image::github_gitops.png[]
 
@@ -49,13 +51,15 @@ image::github_gitops.png[]
 
 Return to backstage to invoke the Gateway template
 
+Click on `Create...` in the sidebar menu, then choose the "Quarkus Gateway Application" component from the template list.
+
 image::backstage_create_gateway.png[]
 
 Insert your `NAMESPACE` value, then click `NEXT STEP` to proceed
 
 image::gateway_1.png[]
 
-Insert your `NAMESPACE` value, then click `NEXT STEP` to proceed
+Insert your `NAMESPACE` values and owner info, then click `NEXT STEP` to proceed
 
 image::gateway_2.png[]
 
@@ -74,7 +78,7 @@ image::gateway_5.png[]
 [#pipelines]
 == Tekton Pipelines
 
-Check the status of your pipelines.  Select one of your pipeline runs, preferrably one that is active
+Check the status of your Builds using Tekton Pipelines.  Select one of your pipeline runs, preferrably one that is still active
 
 image::pipelines.png[]
 
