--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -25,3 +25,4 @@
 ** xref:04-development.adoc#devspaces[OpenShift Dev Spaces]
 ** xref:04-development.adoc#gateway_update[Update the Gateway Component]
 ** xref:04-development.adoc#validate_changes[Validate your changes]
+** xref:04-development.adoc#next_steps[Paving your own Golden Paths]
