--- a/documentation/modules/ROOT/pages/01-setup.adoc
+++ b/documentation/modules/ROOT/pages/01-setup.adoc
@@ -24,9 +24,9 @@ Your user will have an OpenShift _Project_ for your exclusive use. Projects are 
 
 image::project_list.png[]
 
-TIP: If you do not find a project, try reloading your browser to check again
+TIP: The project will be created in the background as you log in. If you do not find a project, try reloading your browser to refresh the listing.
 
-IMPORTANT: Remember your Project names! You will need enter it into the Template forms as your *<Namespace>* value as you deploy components in the next two chapters.
+IMPORTANT: Remember your Project name! You will need enter it into the Template forms as your *<Namespace>* value as you deploy components in the next two chapters.
 
 Next, you'll connect to Backstage and discover the starting point for developing your application. Once that's done, Backstage _Templates_ will help you generate software components as you build a three-tier GeoSpatial mapping demo application.
 
