--- a/documentation/modules/ROOT/pages/02-templates.adoc
+++ b/documentation/modules/ROOT/pages/02-templates.adoc
@@ -1,9 +1,10 @@
 = Templates
 include::_attributes.adoc[]
 
+image::platform_diagram.png[]
+
 [#templates]
 == Software Templates
-
 
 [#frontend]
 == Launch the Frontend template
